syntax = "proto3";

option java_package = "com.example.grpc";
option java_outer_classname = "SearchServiceProto";

service SearchService {
  rpc search (SearchRequest) returns (SearchResponse);
  rpc searchUser (SearchRequest) returns (SearchResponse);
  rpc searchProduct (SearchRequest) returns (SearchResponse);
}

message SearchRequest {
  string query = 1;
}

message SearchResponse {
  repeated string results = 1;
}